plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.google.protobuf' version '0.9.4'
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.25.3"
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.66.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

group = 'Entry-BE-Assignment'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot 기본 의존성
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA (Java Persistence API) 의존성
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Lombok (코드 간결화를 위한 라이브러리)
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MariaDB 드라이버
    implementation 'org.mariadb.jdbc:mariadb-java-client'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 테스트 의존성
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // gRPC 의존성
    implementation 'io.grpc:grpc-netty:1.66.0'        // Netty 의존성
    implementation 'io.grpc:grpc-protobuf:1.66.0'     // gRPC 프로토콜 버퍼
    implementation 'io.grpc:grpc-stub:1.66.0'         // gRPC 스텁
    implementation 'com.google.protobuf:protobuf-java:3.25.3'  // 프로토콜 버퍼
    implementation 'javax.annotation:javax.annotation-api:1.3.2'  // javax 어노테이션

    // Swagger 의존성
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'

}

tasks.named('test') {
    useJUnitPlatform()
}
